Updated js file and index
The character can now move around with the arrow keys.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <title>Javascript Sprite Animation Tutorial</title>
     </head>
     <body>
+        <p style="text-align:center">Use the directional arrow keys to move the character.</p>
         <canvas id="canvas"></canvas><br/>
-        <button onclick="moveLeft()">Left</button>
-        <button onclick="moveRight()">Right</button>
+        <!--<button onclick="moveLeft()">Left</button>
+        <button onclick="moveRight()">Right</button>-->
         <script src="js/scott-pilgrim-animation.js"></script>
     </body>
 </html>
